--- a/copier.yml
+++ b/copier.yml
@@ -6,3 +6,29 @@ project_name:
 module_name:
     type: str
     help: What is your Python module name?
+
+project_description:
+    type: str
+    help: Project description
+
+author:
+    type: str
+    help: Author's name
+
+email:
+    type: str
+    help: Author's email
+
+python:
+    type: str
+    help: Which python?
+    choices:
+        asdf: asdf
+        pyenv: pyenv
+        system: system
+    default: system
+
+python_version:
+    type: str
+    when: "{% if python == 'asdf' %}true{% endif %}"
+    help: Which python version
